# app-template-dx

./: .clippy.toml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  flake.nix  rustfmt.toml
apps/web/: .env.example  Cargo.toml  Dioxus.toml  README.md
apps/web/assets/: README.md
apps/web/src/: main.rs
docs/: ARCHITECTURE.md  BUILD.md  DEVELOPMENT.md  TESTING_DEBUG.md
scripts/: init-template.sh
shared/models/: Cargo.toml  README.md
shared/models/benches/: user_benchmark.rs
shared/models/src/: user.rs
shared/models/tests/: integration_test.rs
shared/ui/: Cargo.toml  README.md  styles.css  tailwind.config.js
shared/ui/assets/: README.md
shared/ui/src/components/: button.rs  card.rs  input.rs  layout.rs  mod.rs
shared/ui/tests/: integration_test.rs
