[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true }
dioxus-web = { workspace = true }
shared-ui = { path = "../../shared/ui" }
shared-models = { path = "../../shared/models" }

[[bin]]
name = "web"
path = "src/main.rs"
